// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deleteClickHandler triggers deleteFile action 1`] = `
<DocumentFragment>
  <div
    class="file"
  >
    <img
      alt=""
      class="file__img"
      src="test-file-stub"
    />
    <div
      class="file__name"
      data-testid="fileName"
    >
      Test File
    </div>
    <div
      class="file__date"
      data-testid="fileDate"
    >
      2023-01-01
    </div>
    <div
      class="file__size"
      data-testid="fileSize"
    >
      12.1 Kb
    </div>
    <div
      class="file__actions"
    >
      <button
        class="secondaryButton"
        data-testid="secondaryButton"
        style="padding: 8px;"
      >
        <img
          alt=""
          class="file__menu"
          src="test-file-stub"
        />
      </button>
      <div
        class="file__options"
      >
        <div
          class="popup"
          data-testid="popup"
        >
          <div
            class="popup__header"
          >
            <div
              class="popup__title"
              data-testid="popupTitle"
            />
            <button
              class="secondaryButton"
              data-testid="popupCloseBtn"
            >
              <img
                alt=""
                class="popup__close"
                data-testid="popupCloseIcon"
                src="test-file-stub"
              />
            </button>
          </div>
          <button
            class="secondaryButton"
            data-testid="secondaryButton"
          >
            Download
          </button>
          <button
            class="secondaryButton"
            data-testid="secondaryButton"
          >
            Delete
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`downloadClickHandler triggers downloadFile action 1`] = `
<DocumentFragment>
  <div
    class="file"
  >
    <img
      alt=""
      class="file__img"
      src="test-file-stub"
    />
    <div
      class="file__name"
      data-testid="fileName"
    >
      Test File
    </div>
    <div
      class="file__date"
      data-testid="fileDate"
    >
      2023-01-01
    </div>
    <div
      class="file__size"
      data-testid="fileSize"
    >
      12.1 Kb
    </div>
    <div
      class="file__actions"
    >
      <button
        class="secondaryButton"
        data-testid="secondaryButton"
        style="padding: 8px;"
      >
        <img
          alt=""
          class="file__menu"
          src="test-file-stub"
        />
      </button>
      <div
        class="file__options"
      >
        <div
          class="popup"
          data-testid="popup"
        >
          <div
            class="popup__header"
          >
            <div
              class="popup__title"
              data-testid="popupTitle"
            />
            <button
              class="secondaryButton"
              data-testid="popupCloseBtn"
            >
              <img
                alt=""
                class="popup__close"
                data-testid="popupCloseIcon"
                src="test-file-stub"
              />
            </button>
          </div>
          <button
            class="secondaryButton"
            data-testid="secondaryButton"
          >
            Download
          </button>
          <button
            class="secondaryButton"
            data-testid="secondaryButton"
          >
            Delete
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`openHandler dispatches correct actions for directory 1`] = `
<DocumentFragment>
  <div
    class="file"
  >
    <img
      alt=""
      class="file__img"
      src="test-file-stub"
    />
    <div
      class="file__name"
      data-testid="fileName"
    >
      Test Directory
    </div>
    <div
      class="file__date"
      data-testid="fileDate"
    >
      2023-01-01
    </div>
    <div
      class="file__size"
      data-testid="fileSize"
    >
      undefinedB
    </div>
    <div
      class="file__actions"
    >
      <button
        class="secondaryButton"
        data-testid="secondaryButton"
        style="padding: 8px;"
      >
        <img
          alt=""
          class="file__menu"
          src="test-file-stub"
        />
      </button>
      <div
        class="file__options"
      >
        <div
          class="popup"
          data-testid="popup"
        >
          <div
            class="popup__header"
          >
            <div
              class="popup__title"
              data-testid="popupTitle"
            />
            <button
              class="secondaryButton"
              data-testid="popupCloseBtn"
            >
              <img
                alt=""
                class="popup__close"
                data-testid="popupCloseIcon"
                src="test-file-stub"
              />
            </button>
          </div>
          <button
            class="secondaryButton"
            data-testid="secondaryButton"
          >
            Delete
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders directory without crashing 1`] = `
<DocumentFragment>
  <div
    class="file"
  >
    <img
      alt=""
      class="file__img"
      src="test-file-stub"
    />
    <div
      class="file__name"
      data-testid="fileName"
    >
      Test Directory
    </div>
    <div
      class="file__date"
      data-testid="fileDate"
    >
      2023-01-01
    </div>
    <div
      class="file__size"
      data-testid="fileSize"
    >
      undefinedB
    </div>
    <div
      class="file__actions"
    >
      <button
        class="secondaryButton"
        data-testid="secondaryButton"
        style="padding: 8px;"
      >
        <img
          alt=""
          class="file__menu"
          src="test-file-stub"
        />
      </button>
      <div
        class="file__options"
      >
        <div
          class="popup"
          data-testid="popup"
        >
          <div
            class="popup__header"
          >
            <div
              class="popup__title"
              data-testid="popupTitle"
            />
            <button
              class="secondaryButton"
              data-testid="popupCloseBtn"
            >
              <img
                alt=""
                class="popup__close"
                data-testid="popupCloseIcon"
                src="test-file-stub"
              />
            </button>
          </div>
          <button
            class="secondaryButton"
            data-testid="secondaryButton"
          >
            Delete
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders file date without crashing 1`] = `
<DocumentFragment>
  <div
    class="file"
  >
    <img
      alt=""
      class="file__img"
      src="test-file-stub"
    />
    <div
      class="file__name"
      data-testid="fileName"
    >
      Test File
    </div>
    <div
      class="file__date"
      data-testid="fileDate"
    >
      2023-01-01
    </div>
    <div
      class="file__size"
      data-testid="fileSize"
    >
      12.1 Kb
    </div>
    <div
      class="file__actions"
    >
      <button
        class="secondaryButton"
        data-testid="secondaryButton"
        style="padding: 8px;"
      >
        <img
          alt=""
          class="file__menu"
          src="test-file-stub"
        />
      </button>
      <div
        class="file__options"
      >
        <div
          class="popup"
          data-testid="popup"
        >
          <div
            class="popup__header"
          >
            <div
              class="popup__title"
              data-testid="popupTitle"
            />
            <button
              class="secondaryButton"
              data-testid="popupCloseBtn"
            >
              <img
                alt=""
                class="popup__close"
                data-testid="popupCloseIcon"
                src="test-file-stub"
              />
            </button>
          </div>
          <button
            class="secondaryButton"
            data-testid="secondaryButton"
          >
            Download
          </button>
          <button
            class="secondaryButton"
            data-testid="secondaryButton"
          >
            Delete
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders file size without crashing 1`] = `
<DocumentFragment>
  <div
    class="file"
  >
    <img
      alt=""
      class="file__img"
      src="test-file-stub"
    />
    <div
      class="file__name"
      data-testid="fileName"
    >
      Test File
    </div>
    <div
      class="file__date"
      data-testid="fileDate"
    >
      2023-01-01
    </div>
    <div
      class="file__size"
      data-testid="fileSize"
    >
      12.1 Kb
    </div>
    <div
      class="file__actions"
    >
      <button
        class="secondaryButton"
        data-testid="secondaryButton"
        style="padding: 8px;"
      >
        <img
          alt=""
          class="file__menu"
          src="test-file-stub"
        />
      </button>
      <div
        class="file__options"
      >
        <div
          class="popup"
          data-testid="popup"
        >
          <div
            class="popup__header"
          >
            <div
              class="popup__title"
              data-testid="popupTitle"
            />
            <button
              class="secondaryButton"
              data-testid="popupCloseBtn"
            >
              <img
                alt=""
                class="popup__close"
                data-testid="popupCloseIcon"
                src="test-file-stub"
              />
            </button>
          </div>
          <button
            class="secondaryButton"
            data-testid="secondaryButton"
          >
            Download
          </button>
          <button
            class="secondaryButton"
            data-testid="secondaryButton"
          >
            Delete
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders file without crashing 1`] = `
<DocumentFragment>
  <div
    class="file"
  >
    <img
      alt=""
      class="file__img"
      src="test-file-stub"
    />
    <div
      class="file__name"
      data-testid="fileName"
    >
      Test File
    </div>
    <div
      class="file__date"
      data-testid="fileDate"
    >
      2023-01-01
    </div>
    <div
      class="file__size"
      data-testid="fileSize"
    >
      12.1 Kb
    </div>
    <div
      class="file__actions"
    >
      <button
        class="secondaryButton"
        data-testid="secondaryButton"
        style="padding: 8px;"
      >
        <img
          alt=""
          class="file__menu"
          src="test-file-stub"
        />
      </button>
      <div
        class="file__options"
      >
        <div
          class="popup"
          data-testid="popup"
        >
          <div
            class="popup__header"
          >
            <div
              class="popup__title"
              data-testid="popupTitle"
            />
            <button
              class="secondaryButton"
              data-testid="popupCloseBtn"
            >
              <img
                alt=""
                class="popup__close"
                data-testid="popupCloseIcon"
                src="test-file-stub"
              />
            </button>
          </div>
          <button
            class="secondaryButton"
            data-testid="secondaryButton"
          >
            Download
          </button>
          <button
            class="secondaryButton"
            data-testid="secondaryButton"
          >
            Delete
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
